# Amazon-FreeRTOS

./: DATASHEET.md  README.md
demos/include/: aws_clientcredential.h  aws_clientcredential_keys.h
libraries/abstractions/wifi/test/: iot_test_wifi.h
projects/sifive/hifive1_rev_b/cmake/: build_1.5.0.bat  build_1.5.0_parallel.bat  flash_1.4.0.bat  flash_1.5.0.bat  flash_1.5.0_parallel.bat  flash_1.5.0_parallel_segger.bat
projects/sifive/hifive1_rev_b/cmake/aws_demos/: CMakeLists.txt
projects/sifive/hifive1_rev_b/freedom_studio/aws_demos/: .cproject  .project
projects/sifive/hifive1_rev_b/freedom_studio/aws_tests/: .cproject  .project
tests/include/: aws_clientcredential.h  aws_clientcredential_keys.h
tools/cmake/toolchains/: risc-v-gcc.cmake
tools/ota_e2e_tests/: pyproject.toml
vendors/sifive/: manifest.cmake
vendors/sifive/3dparty/ESP_AT_Lib/src/api/: esp_netconn.c
vendors/sifive/3dparty/ESP_AT_Lib/src/esp/: esp.c  esp_conn.c  esp_dns.c  esp_input.c  esp_int.c  esp_parser.c  esp_sntp.c
vendors/sifive/3dparty/ESP_AT_Lib/src/include/esp/: esp.h  esp_config_default.h  esp_conn.h  esp_dns.h  esp_netconn.h  esp_private.h
vendors/sifive/3dparty/ESP_AT_Lib/src/include/system/: circular_buffer.h  esp_sys.h  esp_sys_freertos_os.h
vendors/sifive/3dparty/ESP_AT_Lib/src/system/: circular_buffer.c  esp_ll_hifive1_revb.c  esp_sys_freertos_os.c
vendors/sifive/boards/hifive1_rev_b/: CMakeLists.txt  ReadMe.md  hifive1_rev_b.cmake
vendors/sifive/boards/hifive1_rev_b/aws_demos/application_code/: main.c  reset.c  reset.h  wdg.c  wdg.h
vendors/sifive/boards/hifive1_rev_b/aws_demos/application_code/sifive_code/bsp/: freertos.sifive-hifive1-revb.lds
vendors/sifive/boards/hifive1_rev_b/aws_demos/application_code/sifive_code/bsp/install/include/metal/: interrupt.h
vendors/sifive/boards/hifive1_rev_b/aws_demos/application_code/sifive_code/bsp/install/include/metal/drivers/: sifive_fu540-c000_l2.h
vendors/sifive/boards/hifive1_rev_b/aws_demos/application_code/sifive_code/freedom-metal/gloss/: sys_write.c
vendors/sifive/boards/hifive1_rev_b/aws_demos/application_code/sifive_code/freedom-metal/src/: uart.c
vendors/sifive/boards/hifive1_rev_b/aws_demos/application_code/sifive_code/freedom-metal/src/drivers/: sifive_uart0.c
vendors/sifive/boards/hifive1_rev_b/aws_demos/application_code/sifive_code/hal/: hal_flash.h
vendors/sifive/boards/hifive1_rev_b/aws_demos/config_files/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  aws_bufferpool_config.h  aws_demo_config.h  aws_iot_network_config.h  aws_mqtt_agent_config.h  aws_mqtt_config.h  aws_secure_sockets_config.h  esp_config.h  iot_config.h  iot_mqtt_agent_config.h  iot_pkcs11_config.h
vendors/sifive/boards/hifive1_rev_b/aws_tests/application_code/: main.c
vendors/sifive/boards/hifive1_rev_b/aws_tests/application_code/sifive_code/bsp/: PapayaConfig.dts  metal.h
vendors/sifive/boards/hifive1_rev_b/aws_tests/application_code/sifive_code/bsp/install/include/metal/: clock.h  uart.h
vendors/sifive/boards/hifive1_rev_b/aws_tests/application_code/sifive_code/freedom-metal/gloss/: sys_write.c
vendors/sifive/boards/hifive1_rev_b/aws_tests/application_code/sifive_code/hal/: hal_flash.c  hal_spi.h
vendors/sifive/boards/hifive1_rev_b/aws_tests/config_files/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  aws_iot_network_config.h  aws_mqtt_agent_config.h  aws_mqtt_config.h  aws_pkcs11_config.h  aws_shadow_config.h  aws_test_pkcs11_config.h  aws_test_runner_config.h  aws_test_tcp_config.h  aws_test_wifi_config.h  aws_wifi_config.h  esp_config.h  iot_config.h  iot_mqtt_agent_config.h  iot_pkcs11_config.h  iot_test_pkcs11_config.h
vendors/sifive/boards/hifive1_rev_b/ports/pkcs11/: iot_pkcs11_pal.c
vendors/sifive/boards/hifive1_rev_b/ports/secure_sockets/: iot_secure_sockets.c
vendors/sifive/boards/hifive1_rev_b/ports/wifi/: iot_wifi.c
